--- a/.github/workflows/Most-recent-blog-news.yml
+++ b/.github/workflows/Most-recent-blog-news.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: Gold/blog-post-workflow@master
         with:
-          feed_list: "https://medium.com/@Gold31"
+          feed_list: "https://medium.com/feed/@Gold31"
