--- a/.github/workflows/Most-recent-blog-news.yml
+++ b/.github/workflows/Most-recent-blog-news.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: Gold/blog-post-workflow@master
+      - uses: Gold/Most-recent-blog-news@master
         with:
           feed_list: "https://medium.com/feed/@Gold31"
